Added sticky notifications + configurable timeout

--- a/weechat-naughty-notifier.conf
+++ b/weechat-naughty-notifier.conf
@@ -10,6 +10,11 @@ variables:
 color_default: ${gray}
 color_private: ${red}
 
+private_sticky: false
+directed_sticky: false
+
+default_timeout: 5
+
 colors:
   server0:
     "#somechan0": ${blue}
